# jete_tws_sdk

./: CHANGELOG.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/assets/drawable/: equalizer_progress.xml  equalizer_progress_style.xml  equalizer_thumb.xml  ic_arrow_right_24dp.xml  ic_signal_0_bar.xml  ic_signal_1_bar.xml  ic_signal_2_bar.xml  ic_signal_3_bar.xml  ic_signal_4_bar.xml  rounder_action_view_bg.xml  rounder_function_view_bg.xml  top_rounded_dialog_12dp.xml
android/assets/layout/: activity_anc_settings.xml  activity_bluetooth_ota.xml  activity_eq.xml  activity_main.xml  activity_remote_eq.xml  activity_webview.xml  card_device_function.xml  card_eq.xml  card_pod_device.xml  collapsing_toolbar_active_device.xml  device_item.xml  dialog_fragment_name.xml  fragment_function.xml  fragment_home.xml  fragment_settings.xml  layout_device_presentation.xml  layout_function_anc_level.xml  layout_function_device.xml  layout_function_earbuds.xml  layout_function_equalizer.xml  layout_function_key.xml  layout_info_no_bluetooth.xml  layout_info_no_bluetooth_permissions.xml  layout_info_no_devices.xml  layout_info_no_location_permission.xml  layout_info_no_managed_device.xml  layout_quick_launcher.xml  layout_quick_pair_bottom_sheet.xml  layout_scanner_bottom_sheet.xml
android/assets/menu/: menu_block_time.xml  menu_bottom_navigation.xml  menu_eq.xml  menu_ota.xml
android/assets/values/: colors.xml  dimens.xml  (+2 more)
android/libs/: dev-MusicPlayer-release.aar  dev-equalizerview-release.aar  dev-segmentedbar-release.aar
(+173 files in other folders)
